k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sproj-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/arkad-mines/frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "128Mi"
            limits:
              memory: "256Mi"
