k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: sproj-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mongo
          image: docker.io/library/mongo:8.2.1
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "1Gi"
              ephemeral-storage: "2Gi"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d  # MongoDB will run init scripts from here.
      volumes:    # Defines the volumes that pods can mount. Volumes exist at the pod level, not inside the container.
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: mongo-init
          configMap:
            name: mongo-init-script
