k8s/admin-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-lb
  namespace: sproj-app
spec:
  type: LoadBalancer
  selector:
    app: admin
  ports:
    - name: http
      port: 80
      targetPort: 5174
