k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: sproj-app
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - name: http
      port: 80
      targetPort: 5174
