k8s/mongodb-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: sproj-app
spec:
  selector:
    app: mongo
  ports:
     - name: mongo
       protocol: TCP
       port: 27017
       targetPort: 27017
  type: ClusterIP
